# manifest.json

./: .gitignore  DESIGN.md  README.md  index.html  manifest.proto  manifest.schema.json  pyproject.toml
.extern-repos/: live_test_soldr_toolchain.py
.github/workflows/: ci.yml
ci/: check_drift.py  gen_proto.py  gen_schema.py  sync_v1.py  test.py  validate_examples.py
examples/: README.md  catalog.json  contents_manifest.json  embedded_slice.json  github_release.json  index.json  multipart_release.json  source_only_release.json
examples/hierarchical/: manifest.json
examples/hierarchical/clang/: manifest.json
examples/hierarchical/iwyu/: manifest.json
schema/: manifest.schema.json
src/manifest_json/: __init__.py  __main__.py  cli.py  compile.py  platform.py  resolve.py  schema.py  validate.py
src/manifest_json/proto/: __init__.py  manifest_pb2.py
tests/: conftest.py  test_aliases.py  test_archive_contents.py  test_cli.py  test_compile.py  test_examples_validate.py  test_flatten_platform.py  test_kind_hint.py  test_proto.py  test_resolve.py  test_resolve_all.py  test_rustc_corpus.py  test_rustc_triples.py  test_schema.py  test_schema_url.py  test_source.py  test_specificity.py  test_universal_arch.py
tests/corpus/: rustc-target-list.txt
v1/: manifest.proto  manifest.schema.json
